--- a/notes-app/src/style.css
+++ b/notes-app/src/style.css
@@ -1,99 +1,145 @@
+@import url('https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css');
+
 * {
-	padding: 0;
-	margin: 0;
 	box-sizing: border-box;
 }
 
-body {
-	font-family: 'Poppins', sans-serif;
+/* GLOBAL STYLES */
+
+body,
+.App {
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+		Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	width: 100%;
+	height: 100vh;
+	overflow: hidden;
+	font-size: 16px;
+	background: url(https://www.toptal.com/designers/subtlepatterns/patterns/lightpaperfibers.png);
 }
 
-.app-container {
+button {
+	background: none;
+	border: 0;
+	margin: 0;
+	padding: 0;
+	font-size: inherit;
+	font-family: inherit;
+	cursor: pointer;
+	color: #08c;
+}
+button:hover {
+	color: #04c;
+}
+
+.App {
 	display: flex;
 }
 
-/* Sidebar */
+/* SIDEBAR STYLES */
 
-.sidebar {
-	height: 100%;
-	/* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; */
+.app-sidebar {
+	width: 30%;
+	height: 100vh;
+	border-right: 1px solid #ddd;
 }
 
-.sidebar-notes {
-	padding: 0.5em;
-}
-
-.sidebar-notes.active {
-	background-color: #4361ee;
-	color: white;
-}
-
-.sidebar-notes:hover {
-	cursor: pointer;
-	background-color: #9393993f;
-}
-
-.sidebar-title {
+.app-sidebar-header {
 	display: flex;
-	justify-content: space-around;
-	width: 300px;
-	padding: 1em;
-	align-items: center;
+	justify-content: space-between;
+	padding: 25px;
+}
+.app-sidebar-header h1 {
+	margin: 0;
 }
 
-.sidebar-title h4 {
-	font-size: 1.5em;
+.app-sidebar-notes {
+	height: calc(100vh - 78px);
+	overflow-y: scroll;
 }
-
-.sidebar-title button {
-	background-color: #4361ee;
-	border: none;
-	padding: 1em;
-	border-radius: 0.5em;
-	font-weight: bold;
-	color: #fff;
+.app-sidebar-note {
+	padding: 25px;
 	cursor: pointer;
 }
-
-.sidebar-notes-title {
-	padding: 0.5em;
-	align-items: center;
+.sidebar-note-title {
 	display: flex;
 	justify-content: space-between;
 }
-
-.sidebar-notes-title p {
-	color: rgb(163, 40, 40);
+.app-sidebar-note button {
+	color: crimson;
+}
+.app-sidebar-note p {
+	margin: 10px 0;
+}
+.app-sidebar-note small {
+	display: block;
+	color: #999;
 }
 
-/* Editor */
+.app-sidebar-note:hover {
+	background: #ddd;
+}
+.app-sidebar-note.active,
+.app-sidebar-note.active small {
+	background: #08c;
+	color: white;
+}
 
-.editor {
+/* NOTE EDITOR/PREVIEW (MAIN) STYLES */
+
+.app-main {
+	width: 70%;
+	height: 100vh;
+}
+.app-main-note-edit,
+.app-main-note-preview {
+	height: 50vh;
+}
+
+.no-active-note {
+	width: 70%;
+	height: 100vh;
+	line-height: 100vh;
+	text-align: center;
+	font-size: 2rem;
+	color: #999;
+}
+
+/* Editing */
+.app-main-note-edit {
+	padding: 25px;
+}
+
+.app-main-note-edit input,
+textarea {
+	display: block;
+	border: 1px solid #ddd;
+	margin-bottom: 20px;
 	width: 100%;
-	padding: 2em;
-}
-
-.edit-section {
-	display: flex;
-	flex-direction: column;
-	border-bottom: 2px solid rgba(65, 62, 62, 0.103);
-}
-
-.edit-section input {
-	padding: 1em;
-	margin-bottom: 1em;
-	font-size: 1em;
-}
-
-.edit-section textarea {
+	height: calc(50vh - 130px);
+	padding: 10px;
 	resize: none;
-	margin-bottom: 1em;
-	font-size: 1.5em;
+	font-size: inherit;
+	font-family: inherit;
 }
-.preview-section {
-	margin-top: 2em;
+.app-main-note-edit input {
+	height: 50px;
+	font-size: 2rem;
 }
 
-.preview-body {
-	padding: 0 1em;
+/* Preview */
+.app-main-note-preview {
+	border-top: 1px solid #ddd;
+	overflow-y: scroll;
+	background: rgba(0, 0, 0, 0.02);
+}
+
+.preview-title {
+	padding: 25px 25px 0 25px;
+	margin: 0;
+}
+
+.markdown-preview {
+	padding: 0 25px 25px 25px;
+	font-size: 1rem;
+	line-height: 2rem;
 }
